# ml-fp

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dagster  Dockerfile.drift_monitoring  Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.streamlit  README.md  TRACKER.md  deploy_model.py  diagram.mermaid  docker-compose.yml  generate_drift_report.py  hello.py  main.py  main_dagster.py  pyproject.toml  requirements-dagster.txt  requirements.txt  test_api.py  test_drift.ipynb  test_model.py  workspace.yaml
.github/workflows/: ci.yaml
.tmp_dagster_home_f1haxu0h/history/: runs.db
.tmp_dagster_home_f1haxu0h/history/runs/: index.db
.tmp_dagster_home_f1haxu0h/schedules/: schedules.db
.tmp_dagster_home_kt7_zimr/history/: runs.db
.tmp_dagster_home_kt7_zimr/history/runs/: index.db
.tmp_dagster_home_kt7_zimr/schedules/: schedules.db
dagster_home/: dagster.yaml
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 0b5aeac2-1933-4d1c-97c0-53c406511db5.db  2b7536a6-1a6b-4de1-87d7-59cfb6cbdc59.db  2c56ea91-fc0e-47a3-afc8-9ba476957790.db  30fa50ce-e178-421b-aa9f-06c947ae71b8.db  37595908-9f67-4391-897e-406eb1cb7921.db  38c1ab21-95ba-40d4-8886-9761e5fc24fe.db  46b2fd0b-2f0d-458f-a488-284c6adc8a1d.db  4704d0e9-a3ab-4af5-8ed8-4f7355df10a9.db  48e4ef21-e7ea-47a1-921b-b7d9c3902679.db  4a9958ac-6adb-49cd-aea4-58641ae3908b.db  4d14d4fc-ed8c-44da-9fcc-d07931487238.db  52f6364a-12f2-4906-9db5-b07a03e642e9.db  5451e48c-ec3d-495e-bc5d-0189ac0864e3.db  5f13c865-e53d-465c-83ca-964cc892e11a.db  5f1a9661-84cd-4f8d-8c8d-7a9f7cd68aaa.db  6c629328-a76a-473f-8ed4-2a30e6837c31.db  6e86d150-2fc1-4387-b758-a9b394a81eb5.db  6f10cf4f-51ad-4d73-a109-c97aee3ca630.db  7940dd26-951a-473d-a997-17b0c447956b.db  7e5aa890-71a0-452b-8649-a9596ad73085.db  803f0bd2-b735-4a60-afaa-daa4f4ff8aff.db  8534488c-ae13-498d-a195-6d22853af1c8.db  8772b366-24cf-43b5-99ee-a621aadbb27a.db  891d16d9-c769-4aea-bb1a-6657458f74f1.db  index.db  (+15 more)
dagster_home/schedules/: schedules.db
dagster_home/storage/: evaluation_metrics_asset  processed_data_asset  trained_model_asset
data/processed/: predictive_maintenance_processed.csv  synthetic_data.csv
data/raw/: synthetic_data.csv
mlflow_artifacts/: classification_report.json  drift_report.html  drift_report.json
mlflow_artifacts/drift_reports/: drift_report_20250314171618.html
mlruns/0/: meta.yaml
mlruns/444920494944754938/: meta.yaml
notebooks/: 01-data-exploration.ipynb  notebook.ipynb  trained_model.pkl
orchestrator/: assets.py  definitions.py  jobs.py  main_dagster.py
pipelines/: assets.py  dagster_pipeline.py
src/: drift_monitoring.py
src/data/: load_data.py  process_data.py  split_data.py
src/models/: deploy_model.py  evaluate_model.py  predict_model.py  train_model.py  trained_model.pkl
src/monitoring/: config.yaml  drift_monitoring.py
tests/: test_api.py  test_load_data.py  test_mlflow.py  test_process_data.py  test_split_data.py
(+119 files in other folders)
