[project]
name = "ml-fp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "scikit-learn>=1.6.1",
    "xgboost>=2.1.4",
]
