[project]
name = "ml-fp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker>=1.9.0",
    "cachetools>=5.5.2",
    "cloudpickle>=3.1.1",
    "dagit>=1.10.3",
    "dagster>=1.10.3",
    "databricks-sdk>=0.45.0",
    "deprecated>=1.2.18",
    "docker>=7.1.0",
    "fastapi>=0.115.11",
    "flask>=3.1.0",
    "gitdb>=4.0.12",
    "gitpython>=3.1.44",
    "google-auth>=2.38.0",
    "importlib-metadata>=8.5.0",
    "ipykernel>=6.29.5",
    "itsdangerous>=2.2.0",
    "kagglehub>=0.3.10",
    "markdown>=3.7",
    "matplotlib>=3.10.1",
    "mlflow>=2.20.3",
    "mlflow-skinny>=2.20.3",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-semantic-conventions>=0.51b0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pre-commit>=4.1.0",
    "pyarrow>=19.0.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.1",
    "pytest>=8.3.5",
    "rsa>=4.9",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "smmap>=5.0.2",
    "sqlparse>=0.5.3",
    "tree>=0.2.4",
    "waitress>=3.0.2",
    "werkzeug>=3.1.3",
    "wrapt>=1.17.2",
    "xgboost>=2.1.4",
    "zipp>=3.21.0",
]

[tool.dagster]
storage = {postgresql = "postgresql://mlflow:mlflow@db:5432/mlflow_db"}
run_storage = {postgresql = "postgresql://mlflow:mlflow@db:5432/mlflow_db"}
event_log_storage = {postgresql = "postgresql://mlflow:mlflow@db:5432/mlflow_db"}


# MLflow configuration
[dagster.mlflow]
tracking_uri = "http://mlflow_service:5000"  # MLflow service URL in the Docker Compose file

